--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <title>Sam L. Schweickhardt Consulting</title>
 <meta charset="utf-8">
 <meta name="robots" content="index,nofollow,notranslate,noimageindex">
-<meta name="description" content="Welcome to BS Consult.">
-<meta name="keywords" content="bernd schweickhardt,stuttgart,vertrieb,bau,bauen">
+<meta name="description" content="">
+<meta name="keywords" content="sam schweickhardt,stuttgart,vertrieb,consulting,consultant">
 <meta name="geo.placename" content="Stuttgart">
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes,shrink-to-fit=no">
 <meta name="format-detection" content="telephone=no">
@@ -22,13 +22,13 @@
     /* RESET */* {text-decoration-thickness:1px;text-underline-offset:2px;text-decoration-skip-ink:none;font-kerning:normal;outline:none;}html{height:100%;}html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,hr,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,input,textarea,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video,progress{margin:0;padding:0;border:0;font-size:100%;font:inherit;letter-spacing:inherit;color:inherit;text-indent:0;vertical-align:baseline;background:transparent;}body{line-height:1;}table{border-collapse:collapse;border-spacing:0;}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle;}q,blockquote{quotes:none;}q:before,q:after,blockquote:before,blockquote:after{content:"";}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block;}*{box-sizing:content-box;border-radius:0;/* -webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-border-radius:0;-webkit-text-size-adjust:none;-webkit-appearance:none;font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;-moz-font-smoothing:antialiased;-webkit-font-smoothing:antialiased; */}
 	  html{font-size:24px;}
     body{color:var(--text);text-align:center;height:100vh;background:var(--background);font:normal bold 1rem/1.2em serif;display:flex;justify-content:center;align-items:center;}
-    h1{transform:scaleY(.9);}
+    h1{transform:scaleY(.9);text-transform:uppercase;}
 </style>
 </head>
 <body>
 
 
-<h1>SAM L. SCHWEICKHARDT<br>CONSULTING</h1>
+<h1>Sam L. Schweickhardt<br>Consulting</h1>
 
 
 <script src="scripts.js"></script>
@@ -38,8 +38,9 @@
 {
   "@context": "https://schema.org",
   "@type": "Person",
-  "name": "Bernd Schweickhardt",
-  "url": "https://bs-consult.org/",
+  "name": "Sam Schweickhardt",
+  "alternateName": "Sam L. Schweickhardt"
+  "url": "https://samschweickhardt.com/",
   "jobTitle": "Consultant"
 }
 </script>
