--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 -->
 <html lang="en" translate="no">
 <head>
-<title>Sam L. Schweickhardt Consulting</title>
+<title>Sam L. Schweickhardt</title>
 <meta charset="utf-8">
 <meta name="robots" content="index,nofollow,notranslate,noimageindex">
 <meta name="description" content="">
@@ -28,7 +28,7 @@
 <body>
 
 
-<h1>Sam L. Schweickhardt<br>Consulting</h1>
+<h1>Sam L. Schweickhardt</h1>
 
 
 <script src="scripts.js"></script>
@@ -40,8 +40,7 @@
   "@type": "Person",
   "name": "Sam Schweickhardt",
   "alternateName": "Sam L. Schweickhardt"
-  "url": "https://samschweickhardt.com/",
-  "jobTitle": "Consultant"
+  "url": "https://samschweickhardt.com/"
 }
 </script>
 </body>
